# carcalcbot

./: 3.0.0  bot.py  pyproject.toml
tgbot/: config.py
tgbot/dialogs/: __init__.py
tgbot/dialogs/auction_menu/: __init__.py  states.py
tgbot/dialogs/calculator/: __init__.py  constants.py  events.py  getters.py  keyboards.py  onclick.py  states.py  whenable.py  windows.py
tgbot/dialogs/country_menu/: __init__.py  constants.py  events.py  getters.py  keyboards.py  onclick.py  states.py  windows.py
tgbot/handlers/: admin.py  cbr.py  dict_setup.py  user.py
tgbot/middlewares/: config.py
tgbot/models/: calculation.py  costing_data.py  db_commands.py  fakle_repo.py
tgbot/services/: aps_scheduler.py  cbr_currency_pair.py  url_reader.py
tgbot/utils/: calculation.py
